Prevent zoom in when selecting field on mobile

--- a/client/src/assets/style/base/base.scss
+++ b/client/src/assets/style/base/base.scss
@@ -5,3 +5,9 @@
 body {
     background-color: rgb(0, 128, 81);
 }
+
+input,
+select,
+textarea {
+    font-size: 16px;
+}
